--- a/nginx.conf
+++ b/nginx.conf
@@ -7,9 +7,9 @@ upstream backendserver {
 server {
     listen 80;
     listen [::]:80;
-    server_name teste.splinterforge.xyz;
+    server_name www.xxxx.com;
     index index.php index.html index.htm default.php default.htm default.html;
-    root /www/wwwroot/teste.splinterforge.xyz;
+    root /www/wwwroot/www.xxxx.com;
 
     location / {
         proxy_pass http://backendserver;  # Use HTTP here
@@ -66,6 +66,6 @@ server {
         error_log /dev/null;
         access_log /dev/null;
     }
-    access_log  /www/wwwlogs/teste.splinterforge.xyz.log;
-    error_log  /www/wwwlogs/teste.splinterforge.xyz.error.log;
+    access_log  /www/wwwlogs/www.xxxx.com.log;
+    error_log  /www/wwwlogs/www.xxxx.com.error.log;
 }
